# whats-cooking-backend

./: .env  .gitignore  Cargo.toml  README.MD  README.md  docker-compose.yml
fixtures/: ingredients.csv
migrations/2021-02-22-222014_create_recipes/: down.sql  up.sql
migrations/2021-02-25-135315_ingredients/: down.sql  up.sql
migrations/2021-03-14-221104_recipe_ingredients/: down.sql  up.sql
migrations/2021-03-14-221612_shopping_list/: down.sql  up.sql
migrations/2021-03-14-224058_shopping_list_recipes/: down.sql  up.sql
migrations/2021-03-15-180239_shopping_list_ingredients/: down.sql  up.sql
src/: database.rs  handlers.rs  main.rs  model.rs  repo.rs  schema.rs
src/handlers/: handlers.rs  ingredients.rs  mod.rs  recipes.rs
