[package]
authors = ["tim.mulqueen <tim.mulqueen@gmail.com>"]
edition = "2018"
name = "whats-cooking-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.8.0", features = ["attributes"]}
diesel = {version = "1.4.4", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
log = "0.4.14"
r2d2 = "0.8.9"
serde = {version = "1.0", features = ["derive"]}
tide = "0.16.0"
